<resources>
    <string name="app_name">QuizApp</string>
    <string name="action_settings">Settings</string>
    <string name="question1">1. Who is Captain America?</string>
    <string name="question2">2. Who invented the original Super Soldier Serum?</string>
    <string name="question3">3. How much weight can Captain America lift?</string>
    <string name="question4">4. Who is Cap America\'s closest friend?</string>
    <string name="question5">5. What\'s your name:</string>
    <string name="name">Name</string>
</resources>
