<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="60dp">


        <TextView
            android:id="@+id/question1"
            style="@style/HeaderTextStyle"
            android:layout_height="40dp"
            android:text="@string/question1"
            android:textAllCaps="false" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q1_choice1"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:onClick="onQ1Clicked"
                android:text="Steve Rogers" />

            <RadioButton
                android:id="@+id/q1_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQ1Clicked"
                android:text="David Adams" />

            <RadioButton
                android:id="@+id/q1_choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQ1Clicked"
                android:text="Tony Stark" />

            <RadioButton
                android:id="@+id/q1_choice4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQ1Clicked"
                android:text="Bruce Banner" />
        </RadioGroup>

        <TextView
            android:id="@+id/question2"
            style="@style/HeaderTextStyle"
            android:layout_height="40dp"
            android:text="@string/question2"
            android:textAllCaps="false" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q2_choice1"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:onClick="onQ2Clicked"
                android:text="Dr. Guanling Chen" />

            <RadioButton
                android:id="@+id/q2_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQ2Clicked"
                android:text="Red Skull" />

            <RadioButton
                android:id="@+id/q2_choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQ2Clicked"
                android:text="Dr. Abraham Erskine" />

            <RadioButton
                android:id="@+id/q2_choice4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQ2Clicked"
                android:text="Bruce Wayne" />
        </RadioGroup>

        <TextView
            android:id="@+id/question3"
            style="@style/HeaderTextStyle"
            android:layout_height="40dp"
            android:text="@string/question3"
            android:textAllCaps="false" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q3_choice1"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:onClick="onQ3Clicked"
                android:text="400 Tons" />

            <RadioButton
                android:id="@+id/q3_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQ3Clicked"
                android:text="16 Tons" />

            <RadioButton
                android:id="@+id/q3_choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQ3Clicked"
                android:text="2 Tons" />

            <RadioButton
                android:id="@+id/q3_choice4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQ3Clicked"
                android:text="225 Ibs" />
        </RadioGroup>

        <TextView
            android:id="@+id/question4"
            style="@style/HeaderTextStyle"
            android:layout_height="40dp"
            android:text="@string/question4"
            android:textAllCaps="false" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q4_choice1"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:onClick="onQ4Clicked"
                android:text="Taylor Swift" />

            <RadioButton
                android:id="@+id/q4_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQ4Clicked"
                android:text="James 'Bucky' Barnes" />

            <RadioButton
                android:id="@+id/q4_choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQ4Clicked"
                android:text="Tony Stark" />

            <RadioButton
                android:id="@+id/q4_choice4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQ4Clicked"
                android:text="He has no friends" />
        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/question5"
                style="@style/HeaderTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/question5"
                android:textAllCaps="false"
                android:layout_weight="0.07" />

            <EditText
                android:id="@+id/player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.09"
                android:hint="@string/name"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="submitAnswers"
                android:text="Submit" />

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="resetQuestions"
                android:text="Reset" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>